// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDescriptionList should render correctly 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list"
    data-backpack-ds-component="DescriptionList"
  >
    <dt>
      term
    </dt>
    <dd>
      description
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`BpkDescriptionList should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list test-description-list"
    data-backpack-ds-component="DescriptionList"
  >
    <dt>
      term
    </dt>
    <dd>
      description
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`BpkDescriptionList should render correctly with other attributes 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list"
    data-backpack-ds-component="DescriptionList"
    title="this is a description list"
  >
    <dt>
      term
    </dt>
    <dd>
      description
    </dd>
  </dl>
</DocumentFragment>
`;
